--- a/bokeh.oggm.org/docker-compose.yml
+++ b/bokeh.oggm.org/docker-compose.yml
@@ -24,20 +24,20 @@ services:
       - "traefik.http.routers.static-app.entrypoints=web"
       - "traefik.http.routers.static-app.rule=PathPrefix(`/`)"
 
-  simulator-app:
-    image: "ghcr.io/oggm/bokeh:20221229"
-    container_name: "simulator-app"
-    command:
-      - "git+https://github.com/OGGM/glacier_simulator.git@v1.9"
-      - "app.ipynb"
-    environment:
-      - "BOKEH_PREFIX=/simulator"
-      - "BOKEH_ALLOW_WS_ORIGIN=${WS_ORIGIN}"
-    labels:
-      - "traefik.enable=true"
-      - "traefik.http.services.simulator-app.loadbalancer.server.port=8080"
-      - "traefik.http.routers.simulator-app.entrypoints=web"
-      - "traefik.http.routers.simulator-app.rule=PathPrefix(`/simulator`)"
+  # simulator-app:
+  #   image: "ghcr.io/oggm/bokeh:20221229"
+  #   container_name: "simulator-app"
+  #   command:
+  #     - "git+https://github.com/OGGM/glacier_simulator.git@v1.9"
+  #     - "app.ipynb"
+  #   environment:
+  #     - "BOKEH_PREFIX=/simulator"
+  #     - "BOKEH_ALLOW_WS_ORIGIN=${WS_ORIGIN}"
+  #   labels:
+  #     - "traefik.enable=true"
+  #     - "traefik.http.services.simulator-app.loadbalancer.server.port=8080"
+  #     - "traefik.http.routers.simulator-app.entrypoints=web"
+  #     - "traefik.http.routers.simulator-app.rule=PathPrefix(`/simulator`)"
 
   # explorer-app:
   #   image: "oggm/bokeh:20191210"
@@ -87,7 +87,7 @@ services:
   dtcgweb-app:
     container_name: "dtcgweb-app"
     build:
-      context: ./repo/dtcg-web
+      context: ../dtcg-web
     restart: on-failure
     environment:
       - "BOKEH_PREFIX=/dtcgweb"
